2006-09-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Frame_Resizer_Base.h,
	  src/Frame_Resizer_Base.cc,
	  src/Frame_Resizer_Extended.cc,
	  src/GParted_Core.cc: trivial 'breakfast cleanups' :) 

2006-09-08 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/jfs.cc,
	  src/ntfs.cc,
	  src/reiser4.cc,
	  src/reiserfs.cc,
	  src/xfs.cc: be a bit more verbose on errior in set_used_sectors()

2006-09-08 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: declared char * buf global, so it can be
	  initialized in copy_blocks(). This is a lot more efficient than
	  initializing it on every copy_block()

2006-09-08 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: skip resize/move of partition/filesystem if
	  there are no changes.

2006-09-08  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added dz to ALL_LINGUAS

2006-09-07 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Partition.h,
	  src/Partition.cc: added test_overlap()
	* include/GParted_Core.h,
	  src/GParted_Core.cc: perform a readonly testrun before the actual
	  move if destination overlaps source.

2006-09-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: parse /proc/partitions to find devices instead
	  of using ped_device_probe_all()

2006-09-06 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: finally added a decent check for libparted (see also
	  #330776)

2006-09-04 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.3
	  ===================================================

2006-09-04 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: update ntfsbootsector after first sector has
	  changed. This is necessary to let windows boot correctly afterwards.
	* src/ntfs.cc: added FIXME

2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
