@@ -1,5 +1,12 @@
 2006-09-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Dialog_Progress.h,
+	  src/Dialog_Progress.cc: Show number of warnings after all operations
+	  are completed. Also urge people to save their details in case of
+	  error.
+
+2006-09-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Frame_Resizer_Base.h,
 	  src/Frame_Resizer_Base.cc,
 	  src/Frame_Resizer_Extended.cc,
